Adiciona links externos com atributos de segurança e atualiza botões de contato

--- a/index.html
+++ b/index.html
@@ -193,6 +193,8 @@
 						style="color: #e4b429">
 						Estude o Apocalipse verso por verso com o
 						<a
+							rel="noopener"
+							target="_blank"
 							href="https://www.instagram.com/pastormarciosantos64/"
 							style="color: white; text-decoration: underline"
 							>Pr. Márcio Santos</a
@@ -260,7 +262,9 @@
 						com o estudo da Palavra de Deus e o crescimento na fé.
 					</p>
 					<a
-						href="about.html"
+						rel="noopener"
+						target="_blank"
+						href="https://wa.me/5561984395260?text=Olá! Gostaria de conhecer melhor a igreja adventista do sétimo dia do recanto das emas 403 central."
 						class="btn btn--primary btn--about"
 						>Conheça Nossa Igreja</a
 					>
@@ -315,11 +319,7 @@
 			<div class="row block-large-1-2 block-900-full events-list">
 				<div class="column events-list__item">
 					<h3 class="display-1 events-list__item-title">
-						<a
-							href="#0"
-							title=""
-							>Apocalipse Verso por Verso</a
-						>
+						<a title="">Apocalipse Verso por Verso</a>
 					</h3>
 					<p>
 						Você tem vontade de entender mais sobre as verdades do Apocalipse?
@@ -365,6 +365,8 @@
 						"
 						><div style="padding: 16px">
 							<a
+								rel="noopener"
+								target="_blank"
 								href="https://www.instagram.com/p/DIE-MOKxagB/?utm_source=ig_embed&amp;utm_campaign=loading"
 								style="
 									background: #ffffff;
@@ -575,6 +577,8 @@
 									white-space: nowrap;
 								"
 								><a
+									rel="noopener"
+									target="_blank"
 									href="https://www.instagram.com/p/DIE-MOKxagB/?utm_source=ig_embed&amp;utm_campaign=loading"
 									style="
 										color: #c9c8cd;
@@ -628,13 +632,17 @@
 				<div class="column large-half medium-full">
 					<div class="series-content__buttons">
 						<a
-							href="#contactForm"
+							rel="noopener"
+							target="_blank"
+							href="https://wa.me/5561984395260?text=Olá! Vou participar do evento Apocalipse Verso por Verso aos domingos, às 19h."
 							class="btn btn--large h-full-width"
 							>Vou participar</a
 						>
 						<a
+							rel="noopener"
+							target="_blank"
 							id="estudos"
-							href="#contactForm"
+							href="https://wa.me/5561984395260?text=Olá! Gostaria de receber estudos bíblicos."
 							class="btn btn--large h-full-width"
 							>Quero Receber Estudos</a
 						>
@@ -745,7 +753,9 @@
 							</p>
 							<p>
 								<a
-									href="https://igrejas.adventistas.org/igreja/recanto-das-emas-403-sede/"
+									rel="noopener"
+									target="_blank"
+									href="https://www.google.com/maps/dir//-15.90952100,-48.06442500"
 									class="btn btn--footer"
 									>Como Chegar</a
 								>
@@ -783,8 +793,8 @@
 						>Desenvolvido por
 						<a
 							rel="noopener"
-							href="https://www.instagram.com/gabriel_jose_oliveira_123/"
 							target="_blank"
+							href="https://www.instagram.com/gabriel_jose_oliveira_123/"
 							>Gabriel José Oliveira</a
 						></span
 					>
@@ -815,7 +825,7 @@
 			<!-- Botão WhatsApp -->
 			<a
 				title="Entre em contato pelo WhatsApp"
-				href=""
+				href="https://wa.me/5561984395260?text=Olá! Gostaria de mais informações sobre o evento Apocalipse Verso por Verso."
 				class="btn-whatsapp-pulse">
 				<i class="fab fa-whatsapp"></i> </a
 			><style>
