Atualiza o nome do Pastor na seção de eventos para "Pr. Márcio" e ajusta a formatação do texto.

--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
 							target="_blank"
 							href="https://www.instagram.com/pastormarciosantos64/"
 							style="color: white; text-decoration: underline"
-							>Pr. Márcio Santos</a
-						>. <br />Todos os domingos, às 19 horas.
+							>Pr. Márcio</a
+						>. Todos os domingos, às 19 horas.
 					</p>
 					<style>
 						@media (max-width: 1200px) {
