Remove preloader div and add "Como Chegar" button na seção de localização

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 	<body id="top">
 		<!-- preloader
     ================================================== -->
-		<div id="preloader">
+		<!--<div id="preloader">
 			<div
 				id="loader"
 				class="dots-jump">
@@ -137,7 +137,7 @@
 				<div></div>
 				<div></div>
 			</div>
-		</div>
+		</div>-->
 
 		<!-- header
     ================================================== -->
@@ -297,6 +297,11 @@
 						<li>
 							<h4>Localização</h4>
 							<p>Q 403 - Recanto das Emas, Brasília - DF, 70297-400</p>
+							<a
+								href="#maps"
+								class="btn btn--stroke"
+								>Como Chegar</a
+							>
 						</li>
 					</ul>
 				</div>
