--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@
 							rel="noopener"
 							target="_blank"
 							href="https://www.instagram.com/gabriel_jose_oliveira_123/"
-							>Gabriel José Oliveira</a
+							>Gabriel José</a
 						></span
 					>
 					<span
