Adiciona meta tags do Open Graph e Twitter para melhorar a integração com redes sociais

--- a/index.html
+++ b/index.html
@@ -14,6 +14,45 @@
 			name="author"
 			content="Gabriel José Oliveira - Diretor Jovem da IASD Central 403" />
 
+		<!-- Facebook Meta Tags -->
+		<meta
+			property="og:url"
+			content="https://apocalipse-verso-por-verso.vercel.app/index.html" />
+		<meta
+			property="og:type"
+			content="website" />
+		<meta
+			property="og:title"
+			content="IASD Central 403 - Apocalipse Verso por Verso" />
+		<meta
+			property="og:description"
+			content="Estudo bíblico do Apocalipse verso por verso com o Pastor Márcio Santos. Todo domingo às 19h na Igreja Adventista do Sétimo Dia Central 403 - Recanto das Emas." />
+		<meta
+			property="og:image"
+			content="./material/apocalipse.jpg" />
+
+		<!-- Twitter Meta Tags -->
+		<meta
+			name="twitter:card"
+			content="summary_large_image" />
+		<meta
+			property="twitter:domain"
+			content="apocalipse-verso-por-verso.vercel.app" />
+		<meta
+			property="twitter:url"
+			content="https://apocalipse-verso-por-verso.vercel.app/index.html" />
+		<meta
+			name="twitter:title"
+			content="IASD Central 403 - Apocalipse Verso por Verso" />
+		<meta
+			name="twitter:description"
+			content="Estudo bíblico do Apocalipse verso por verso com o Pastor Márcio Santos. Todo domingo às 19h na Igreja Adventista do Sétimo Dia Central 403 - Recanto das Emas." />
+		<meta
+			name="twitter:image"
+			content="./material/apocalipse.jpg" />
+
+		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
 		<!-- mobile specific metas
     ================================================== -->
 		<meta
@@ -125,15 +164,18 @@
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer" />
 		<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17005003093">
-</script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=AW-17005003093"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
 
-  gtag('config', 'AW-17005003093');
-</script>
+			gtag("config", "AW-17005003093");
+		</script>
 	</head>
 
 	<body id="top">
