--- a/index.html
+++ b/index.html
@@ -279,13 +279,16 @@
 
 			<ul class="hero-social">
 				<li class="hero-social__title">Siga-nos</li>
-				<li><a href="mailto:marcio.antonio@adventistas.org">Email</a></li>
+				<li><a rel="noopener"
+							target="_blank" href="mailto:marcio.antonio@adventistas.org">Email</a></li>
 				<li
-					><a href="https://www.youtube.com/@Adventistas403RecantodasEmas"
+					><a rel="noopener"
+							target="_blank" href="https://www.youtube.com/@Adventistas403RecantodasEmas"
 						>YouTube</a
 					></li
 				>
-				<li><a href="https://www.instagram.com/iasd403/">Instagram</a></li>
+				<li><a rel="noopener"
+							target="_blank" href="https://www.instagram.com/iasd403/">Instagram</a></li>
 			</ul>
 			<!-- end hero-social -->
 
