--- a/index.html
+++ b/index.html
@@ -279,16 +279,9 @@
 
 			<ul class="hero-social">
 				<li class="hero-social__title">Siga-nos</li>
-				<li><a rel="noopener"
-							target="_blank" href="mailto:marcio.antonio@adventistas.org">Email</a></li>
-				<li
-					><a rel="noopener"
-							target="_blank" href="https://www.youtube.com/@Adventistas403RecantodasEmas"
-						>YouTube</a
-					></li
-				>
-				<li><a rel="noopener"
-							target="_blank" href="https://www.instagram.com/iasd403/">Instagram</a></li>
+				<li><a rel="noopener" target="_blank" href="mailto:marcio.antonio@adventistas.org">Email</a></li>
+				<li><a rel="noopener" target="_blank" href="https://www.youtube.com/@Adventistas403RecantodasEmas">YouTube</a></li>
+				<li><a rel="noopener" target="_blank" href="https://www.instagram.com/iasd403/">Instagram</a></li>
 			</ul>
 			<!-- end hero-social -->
 
@@ -885,6 +878,8 @@
 			<!-- Botão WhatsApp -->
 			<a
 				title="Entre em contato pelo WhatsApp"
+				rel="noopener"
+				target="_blank"
 				href="https://wa.me/5561984395260?text=Olá! Gostaria de mais informações sobre o evento Apocalipse Verso por Verso."
 				class="btn-whatsapp-pulse">
 				<i class="fab fa-whatsapp"></i> </a
