--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			content="Estudo bíblico do Apocalipse verso por verso com o Pastor Márcio Santos. Todo domingo às 19h na Igreja Adventista do Sétimo Dia Central 403 - Recanto das Emas." />
 		<meta
 			property="og:image"
-			content="./material/apocalipse.jpg" />
+			content="/material/apocalipse.jpg" />
 
 		<!-- Twitter Meta Tags -->
 		<meta
@@ -49,7 +49,7 @@
 			content="Estudo bíblico do Apocalipse verso por verso com o Pastor Márcio Santos. Todo domingo às 19h na Igreja Adventista do Sétimo Dia Central 403 - Recanto das Emas." />
 		<meta
 			name="twitter:image"
-			content="./material/apocalipse.jpg" />
+			content="/material/apocalipse.jpg" />
 
 		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
