--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 		<section
 			class="s-hero"
 			data-parallax="scroll"
-			data-image-src="./material/jesus.jpg"
+			data-image-src="./material/jesusFundo.jpg"
 			data-natural-width="3000"
 			data-natural-height="2000"
 			data-position-y="center">
